package com.rolex.microlabs.structural.flyweight;

/**
 * @author rolex
 * @since 2020
 */
public interface Potion {
    String remark();
}
